--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
