--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.1",
+    "lambda-multipart-parser": "^1.0.0",
+    "nodemailer": "^6.4.18",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
