--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,5 @@
     functions = "functions"
 [[redirects]]
     from = "/api/*"
-    to = "/.netlify/functions/:splat"
+    to = "/functions/:splat"
     status = 200
