--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,11 @@
 [[redirects]]
     from = "/api/*"
     to = "/.netlify/functions/:splat"
+    status = 200
+    force = true
+    headers = { Content-Type = "multipart/form-data" }
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
   for = "/*"
     [headers.values]
     Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "OPTIONS, POST"
-    Access-Control-Allow-Headers = "Content-Type, content-type"
